# gcm-tool

./: .env.example  .gitignore  README.md  __init__.py  ai.py  git.py  main.py  pyproject.toml  test.py
gcm/: ai.py  git.py  main.py
gcm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_gcm.py
