[project]
name = "gcm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "python-dotenv",
    "pyperclip",
    "argcomplete",
]

[project.scripts]
gcm = "gcm.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcm*"]